--- a/project/Makefile
+++ b/project/Makefile
@@ -20,6 +20,7 @@ all:
 	python3 parse_piece.py pieces/000000000006010_Missa-Nuncqua-fue-pena-maior_Gloria_La-Rue-Pierre-de_file1.xml
 	python3 parse_piece.py pieces/000000000010001_Innsbruck-ich-mu-dich-lassen_Isaac-Henricus_file3.xml
 	python3 parse_piece.py pieces/000000000010132_Esclave-puist-yl_Binchois-Gilles-de-Bins-dit_file1.xml
+	make q4 q5
 	make clean
 	make rdump
 
